[project]
name = "aula-08-funcoes-etl-pandas-json-parket"
version = "0.1.0"
description = ""
authors = [
    {name = "Jorge Veras",email = "jverasfh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
